frontend/src/styles/blocks/banner.scss
$hb-banner-breakpoint: 30em;
@mixin hb-banner-vertical-until() {
	@media (max-width: $hb-banner-breakpoint) {
		@content;
	}
}
@mixin hb-banner-horizontal-from() {
	@media (min-width: ($hb-banner-breakpoint + 0.001em)) {
		@content;
	}
}

.hb-block-banner {
	--hb-block-banner-size: 51rem;
	display: flex;
	flex-direction: column;
	justify-content: flex-end;
	align-items: center;
	max-inline-size: var(--hb-block-banner-size);
	margin-inline: auto;

	border-radius: 2em;
	overflow: hidden;
	block-size: calc(var(--hb-vr-base) * 20);

	@media (min-width: 23.001em) {
		block-size: calc(var(--hb-vr-base) * 18);
	}
	@include hb-banner-horizontal-from() {
		block-size: calc(var(--hb-vr-base) * 11);
	}

	position: relative;
	&::before {
		content: "";
		position: absolute;
		inset-inline-start: 0;
		inset-block-start: 0;
		inline-size: 100%;
		block-size: 100%;
		background-color: var(--hb-colors-emphasizing);
		--hb-block-banner-size-circle: calc(var(--hb-vr-base) * 6);
		clip-path: circle(var(--hb-block-banner-size-circle) at 50% calc(var(--hb-vr-base) * 0.5));

		@include hb-banner-horizontal-from() {
			clip-path: circle(var(--hb-block-banner-size-circle) at calc(var(--hb-vr-base) * 4) calc(var(--hb-vr-base) * 3));
		}
	}
	&::after {
		content: "";
		z-index: -1;
		position: absolute;
		inset-inline-start: 0;
		inset-block-end: 0;
		display: block;
		inline-size: 100%;
		max-inline-size: 33rem;
		block-size: 100%;
		background-image: var(--hb-block-banner-background-url);
		background-size: cover;
		background-repeat: no-repeat;
		background-position: center center;

		@include hb-banner-horizontal-from() {
			max-inline-size: var(--hb-block-banner-size);
		}
	}
	&--rotate::after {
		transform: rotateY(0.5turn);
	}


	&__text {
		position: absolute;
		inset-inline-start: 0;
		inset-block-start: 0;
		padding: calc(var(--hb-vr-base) * 1);
		color: var(--hb-colors-default-background);
		max-inline-size: 19rem;

		@include hb-banner-vertical-until() {
			text-align: center;
		}

		:first-child {
			line-height: 1.1;
		}
	}

	&__action {
		z-index: 1;
		@include hb-banner-vertical-until() {
			align-self: flex-end;
			margin-inline-end: calc(var(--hb-vr-base) * 1);
		}
	}

	&__button {
		&--standalone {
			position: absolute;
			inset-block-start: calc(100% + (var(--hb-vr-base) * 9));
			inset-inline-start: 50%;
			transform: translateX(-50%);

			@include hb-banner-horizontal-from() {
				display: none;
			}
		}
		&--inline {
			@include hb-banner-vertical-until() {
				display: none;
			}
		}
	}
}

